# fusesoc-examples

./: .gitattributes  .gitignore  README.md  REUSE.toml  flake.nix  fusesoc.conf  pyproject.toml
doc/: primitive_libraries.dot
examples/filters/: top.core  top.sv  wallace_tree_multiplier.core  wallace_tree_multiplier.sv
examples/filters/multipliers/: array_multiplier.core  wallace_tree_multiplier.core
examples/filters/prims/: full_adder.core
examples/filters/prims_generic/: adder.core  full_adder.core  prims_generic.core
examples/filters/prims_secret/: prims_secret.core
examples/filters/prims_specific/: adder.sv  full_adder.core  prims_specific.core
examples/primgen_as_filter/: prim.gv  prim.md
examples/virtual_cores/: array_multiplier.core  multiplier.core  multiplier.sv  top.core  top.sv  virtual_cores.core
examples/virtual_cores/generic_adder/: adder.sv  generic_adder.core
examples/virtual_cores/prims_generic/: adder.core  adder.sv  full_adder.core  half_adder.core  half_adder.sv  prims_generic.core
examples/virtual_cores/prims_secret/: adder.sv  prims_secret.core
prims_lib/: README.md
prims_lib/doc/: how-opentitan-handles-primitives.md  toy_example.dot  toy_example_extended.dot
prims_lib/filters/: fusesoc.conf  top.core  top.sv
prims_lib/virtual_cores/: fusesoc.conf  top.core
top_config_pkg/: fusesoc.conf
top_config_pkg/top_darjeeling/: pinmux_pkg.core  pinmux_pkg.sv  top_darjeeling.core  top_darjeeling.sv
top_config_pkg/top_earlgrey/: pinmux_pkg.core  pinmux_pkg.sv  top_earlgrey.core  top_earlgrey.sv
(+49 files in other folders)
