# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "fusesoc-prim-lib-examples"
version = "0.0.0"
description = "FuseSoC Prim Lib Examples"
license = "Apache 2.0"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fusesoc = "^2.4"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 79
extend-exclude = []

[tool.ruff.lint]
select = ["ALL"]
